# variational_inference_quatum_entropy

./: LICENSE  README.md  pyproject.toml
experiments/: KL.ipynb  competing_algorithms.ipynb  competing_algorithms_d16.ipynb  competing_algorithms_d30.ipynb  convergence_chambolle_pock.ipynb  hierarchies_greedy.ipynb  logp.ipynb
quant_inf/: __init__.py
quant_inf/algorithms/: __init__.py  base_class.py  exact_bf.py  logdet.py  quant_diag.py  quant_greedy.py  quantum.py  trw.py
quant_inf/tools/: __init__.py  cvxpy.py  list.py  manip.py  projection_matrix.py  random_coefficients.py
